[gd_scene load_steps=2 format=3 uid="uid://c7fyjruwe3ule"]

[ext_resource type="Script" uid="uid://cqccneiw6bdp1" path="res://addons/auto_structured/ui/dialogs/socket_wizard_dialog.gd" id="1"]

[node name="SocketWizardDialog" type="AcceptDialog"]
unique_name_in_owner = true
oversampling_override = 1.0
title = "Socket Wizard"
size = Vector2i(720, 520)
min_size = Vector2i(720, 520)
ok_button_text = "Apply"
script = ExtResource("1")

[node name="Margin" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0

[node name="VBox" type="VBoxContainer" parent="Margin"]
custom_minimum_size = Vector2(0, 420)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TileLabel" type="Label" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Tile: (none)"

[node name="DescriptionLabel" type="RichTextLabel" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "Use templates to seed socket types, then assign which tiles connect to each socket."
scroll_active = false

[node name="TemplatePanel" type="VBoxContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TemplateHeader" type="HBoxContainer" parent="Margin/VBox/TemplatePanel"]
layout_mode = 2

[node name="TemplateLabel" type="Label" parent="Margin/VBox/TemplatePanel/TemplateHeader"]
layout_mode = 2
size_flags_horizontal = 3
text = "Templates"

[node name="ApplyTemplateButton" type="Button" parent="Margin/VBox/TemplatePanel/TemplateHeader"]
layout_mode = 2
text = "Apply"

[node name="TemplateOption" type="OptionButton" parent="Margin/VBox/TemplatePanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="TemplateDivider" type="HSeparator" parent="Margin/VBox"]
layout_mode = 2

[node name="MainHBox" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SocketColumn" type="VBoxContainer" parent="Margin/VBox/MainHBox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="SocketListLabel" type="Label" parent="Margin/VBox/MainHBox/SocketColumn"]
layout_mode = 2
text = "Sockets"

[node name="SocketList" type="ItemList" parent="Margin/VBox/MainHBox/SocketColumn"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RightColumn" type="VBoxContainer" parent="Margin/VBox/MainHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SocketHeader" type="Label" parent="Margin/VBox/MainHBox/RightColumn"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Select a socket to edit"

[node name="SocketTypeRow" type="HBoxContainer" parent="Margin/VBox/MainHBox/RightColumn"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SocketTypeLabel" type="Label" parent="Margin/VBox/MainHBox/RightColumn/SocketTypeRow"]
layout_mode = 2
text = "Socket Type"

[node name="SocketTypeOption" type="OptionButton" parent="Margin/VBox/MainHBox/RightColumn/SocketTypeRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="AllowSelfCheckBox" type="CheckBox" parent="Margin/VBox/MainHBox/RightColumn"]
unique_name_in_owner = true
layout_mode = 2
text = "Allow connections to same socket type"

[node name="RotationRow" type="HBoxContainer" parent="Margin/VBox/MainHBox/RightColumn"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RotationLabel" type="Label" parent="Margin/VBox/MainHBox/RightColumn/RotationRow"]
layout_mode = 2
text = "Minimum rotation"

[node name="RotationOption" type="OptionButton" parent="Margin/VBox/MainHBox/RightColumn/RotationRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 3
popup/item_0/text = "No minimum"
popup/item_0/id = 0
popup/item_1/text = ">= 90°"
popup/item_1/id = 1
popup/item_2/text = ">= 180°"
popup/item_2/id = 2

[node name="ReciprocalCheckBox" type="CheckBox" parent="Margin/VBox/MainHBox/RightColumn"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Apply reciprocal updates to linked tiles"

[node name="LinkedTilesLabel" type="Label" parent="Margin/VBox/MainHBox/RightColumn"]
layout_mode = 2
text = "Linked tiles"

[node name="ConnectionsScroll" type="ScrollContainer" parent="Margin/VBox/MainHBox/RightColumn"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ConnectionsContainer" type="VBoxContainer" parent="Margin/VBox/MainHBox/RightColumn/ConnectionsScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ConnectionsInfo" type="Label" parent="Margin/VBox/MainHBox/RightColumn"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Toggle tiles to add/remove compatible socket types."

[node name="FooterInfo" type="Label" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Changes apply when you press \"Apply\"."
